version/0.12/_sources/api/ansys/health/heart/models/FourChamber.rst.txt






:class:`FourChamber`
====================

.. py:class:: ansys.health.heart.models.FourChamber(working_directory: pathlib.Path | str = None)

   Bases: :py:obj:`HeartModel`


   
   Model of the left/right ventricle and left/right atrium.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FourChamber

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~left_ventricle`
            - Left ventricle part.
          * - :py:attr:`~right_ventricle`
            - Right ventricle part.
          * - :py:attr:`~septum`
            - Septum.
          * - :py:attr:`~left_atrium`
            - Left atrium part.
          * - :py:attr:`~right_atrium`
            - Right atrium part.






Import detail
-------------

.. code-block:: python

    from ansys.health.heart.models import FourChamber


Attribute detail
----------------

.. py:attribute:: left_ventricle
   :type:  ansys.health.heart.objects.Part

   
   Left ventricle part.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: right_ventricle
   :type:  ansys.health.heart.objects.Part

   
   Right ventricle part.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: septum
   :type:  ansys.health.heart.objects.Part

   
   Septum.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: left_atrium
   :type:  ansys.health.heart.objects.Part

   
   Left atrium part.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: right_atrium
   :type:  ansys.health.heart.objects.Part

   
   Right atrium part.
















   ..
       !! processed by numpydoc !!





